kubernetes/kustomize/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 3000
  type: ClusterIP
  selector:
    app: backend
